--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "create:lib": "./node_modules/.bin/babel --out-dir lib src",
     "build": "npm run clear && npm run create:lib",
     "build:watch": "npm run clear && npm run create:lib -- --watch",
-    "build:umd": "./node_modules/.bin/webpack --output-filename exemplo.js",
-    "build:umd:min": "./node_modules/.bin/webpack --output-filename exemplo.min.js -p",
+    "build:umd": "./node_modules/.bin/webpack --output-filename flunt.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename flunt.min.js -p",
     "build:all": "npm run build && npm run build:umd && npm run build:umd:min",
     "lint": "./node_modules/.bin/eslint src/*.js",
     "prepush": "npm run lint && npm run test:coverage",
