--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "tdd",
     "library"
   ],
-  "author": "Jhones Goncalves <jhones.goncalves@outlook.com> (http://jhonesgoncalves.esy.es/)",
+  "author": "Jhones Goncalves <jhones.goncalves@outlook.com> (http://jhones.io/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jhonesgoncal/exemplo/issues"
